# study-rust

./: .gitignore  Cargo.toml
src/: Main.rs
