[package]
name = "study_rust"
version = "0.0.0"
authors = ["101 <tmddnjs001133@dsm.hs.kr>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.60"
rand = "0.8.5"
